Fix [Feature store] misaligned headers in "Feature sets" screen (#1640)

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -64,6 +64,10 @@
     }
   }
 
+  .targets-cell {
+    min-width: 75px;
+  }
+
   &__content {
     position: relative;
     width: 100%;
